refactor is completed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="share_market_msg">Share Market Msg</string>
     <string name="contact">Contact</string>
     <string name="link">Link</string>
+    <string name="app_logo">App Logo</string>
+    <string name="for_any_query_please_contact_us">For any query please contact us</string>
 
     <string-array name="Services_array">
         <item>METAL SPOT RATE</item>
